# rust-ffi-example

./: Cargo.toml  LICENSE  README.md
ffi-example/: Cargo.toml
ffi-example-sys/: Cargo.toml  build.rs
ffi-example-sys/src/c/: all.h  array.c  array.h  string.c  string.h
ffi-example/src/: main.rs  sequence.rs
